--- a/index.html
+++ b/index.html
@@ -173,16 +173,11 @@ const prizes = [
       }
     }
 
-    function weightedRandomPrize() {
-      const total = prizes.reduce((sum, p) => sum + p.weight, 0);
-      const rand = Math.random() * total;
-      let acc = 0;
-      for (let i = 0; i < prizes.length; i++) {
-        acc += prizes[i].weight;
-        if (rand < acc) return { index: i, prize: prizes[i].name };
-      }
-      return { index: 0, prize: prizes[0].name };
-    }
+   function weightedRandomPrize() {
+  const index = prizes.findIndex(p => p.name === "Chúc bạn may mắn lần sau");
+  return { index, prize: "Chúc bạn may mắn lần sau" };
+}
+
 
     let deg = 0;
 
@@ -242,6 +237,7 @@ const rotateDeg = 360 * (5 + Math.floor(Math.random() * 4)) + (360 - index * seg
   </script>
 </body>
 </html>
+
 
 
 
